--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,10 @@ params {
         sh_fitting_basis="descoteaux07"
 
 
+    //**Resample bvals **//
+        run_resample_bvals=false
+        bvals_to_extract=false
+
     //**Preliminary DWI brain extraction**//
         dilate_b0_mask_prelim_brain_extraction=5
         bet_prelim_f=0.16
